fixed list item text drop bug and toggle button overlap

--- a/css/categories.css
+++ b/css/categories.css
@@ -13,8 +13,7 @@ main {
 #sidebar {
     position: absolute;
     height : 100%;
-    width: 0;
-    overflow-x: hidden;
+/*    width: 0;*/
     background-color: #eae6e6;
     -webkit-transition: all .5s;
     transition: all .5s;
@@ -53,6 +52,7 @@ main {
     color: #333;
     -webkit-transition: all .3s;
     
+    word-break: break-all;
     transition: all .3s;
 /*    border-bottom: 2px solid #01274a;*/
 /*    border-top: 1px solid #045aa7;*/
@@ -115,6 +115,7 @@ main {
 #page_content h2 {
     font-family: 'Cairo', sans-serif;
     font-size: 2.5em;
+    padding-left: 45px;
 /*    margin-top: 30px;*/
     margin-top: 0;
     min-height: 50px;
